added slider and more features

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>RAF about Us page</title>
   <!-- Bootstrap CSS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
@@ -42,16 +42,14 @@
 
 
 
-<div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" data-image-src="images/about-us-bg.jpg">
+<div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" data-image-src="images/about-us-bg.jpeg">
   <div class="container">
     <div class="col-sm-6 offset-sm-6">
       <h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT US</h2>
       <hr/>
-      <p class="wow bounceInRight" data-wow-delay=".25s">WEAVING FITNESS INTO EVERYDAY LIFE. <br><br> Let's take a step, invest your time and energy, yourself for the good of you and your family. Come join the way to a healthy life. Weaving fitness into your busy lifestyle!
+      <p style="padding-bottom: 100px ;" class="wow bounceInRight" data-wow-delay=".25s">WEAVING FITNESS INTO EVERYDAY LIFE. <br><br> Let's take a step, invest your time and energy, yourself for the good of you and your family. Come join the way to a healthy life. Weaving fitness into your busy lifestyle!
 
       </p>
-      <a class="btn btn-lg btn-outline-danger d-inline-block text-center mx-auto wow bounceInDown">Learn More</a> </div>
- 
      </div>
   </div>
 </div>
@@ -118,10 +116,10 @@
             <p class="card-text"> Each individual can have their own personal understanding of what fitness means. To some individuals, being fit means the ability to complete a marathon or lift a lot of weight. To another, it could mean walking around the block without becoming short of breath. Whatever your defination might be, Rise and fit is your stopping point.
             </p>
           </div>
-          <img class="card-img-top img-fluid wow bounceInRight" data-wow-delay=".15s" src="images/g1.jpg" alt="Card image"> </div>
+          <img class="card-img-top img-fluid wow bounceInRight" data-wow-delay=".15s" src="images/g1.jpg" alt="Nikhil Sisodia card image"> </div>
       </div>
       <div class="col-md-4">
-        <div class="card"> <img class="card-img-top img-fluid wow bounceInUp" data-wow-delay=".15s" src="images/g2.jpg" alt="Card image">
+        <div class="card"> <img class="card-img-top img-fluid wow bounceInUp" data-wow-delay=".15s" src="images/g2.jpg" alt="Nikhil S card image">
           <div class="card-body mt-4 wow bounceInDown" data-wow-delay=".15s">
             <h4 class="card-title">Shruti</h4>
             <p class="card-text">Fitness is the condition of being physically and mentally fit. It also involves mental acuity, cardiorespiratory endurance, muscular strength, muscular endurance, body composition, and flexibility. Rise and fit helped me attaining all these.
@@ -136,7 +134,7 @@
             <p class="card-text">Fitness for me is bringing yourself to a state of total balance. You have to spend quality time developing and fine tuning all of the major components in your life. The main guideline is to achieve overall fitness i.e. physically, mentally, emotionally, financially and also nutritionally. I found Rise and Fit to be the perfect guide to my fitness path.
             </p>
           </div>
-          <img class="card-img-top img-fluid wow bounceInLeft" data-wow-delay=".15s" src="images/g3.jpg" alt="Card image"> </div>
+          <img class="card-img-top img-fluid wow bounceInLeft" data-wow-delay=".15s" src="images/g3.jpg" alt="Nikhil S image"> </div>
       </div>
     </div>
   </div>
@@ -217,3 +215,4 @@
 
 </body>
 </html>
+<!-- Created By Nikhil Sisodia -->
